--- a/Application/LinkBubble/build.gradle
+++ b/Application/LinkBubble/build.gradle
@@ -74,6 +74,11 @@ android {
             }
         }
     }
+    sourceSets {
+        main {
+            jni.srcDirs = []
+        }
+    }
     buildTypes {
         debug {
             applicationIdSuffix '.dev'
